Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79563

qv4compileddata_p.h(296): error C2134: 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max': call does not result in a constant expression

    XMLWordPrintable

Details

    • Windows, WinRT
    • 76b86342d47df953009457a554245aace49eecf6 (qt/qtdeclarative/5.13)

    Description

      https://codereview.qt-project.org/c/qt/qt5/+/276580 Update submodules on '5.13' in qt/qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1572245335

      https://testresults.qt.io/logs/qt/qtdeclarative/343205b2df7ea4c5b14e9bc56c027c5cb8c7cc08/WindowsWindows_10x86_64WinRTWinRT_10x86_64MSVC2015qtci-windows-10-x86_64-14-06e255DisableTests/21c56682a817efdff3285f65b971d09db675557c/build_1572245341/log.txt.gz

      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): error C2134: 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max': call does not result in a constant expression
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): note: failure was caused by call of undefined function or one not declared 'constexpr'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\install\include\qtcore\qendian.h(330): note: see declaration of 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\src\qml\compiler\qv4compileddata_p.h(296): error C2134: 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max': call does not result in a constant expression
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\src\qml\compiler\qv4compileddata_p.h(296): note: failure was caused by call of undefined function or one not declared 'constexpr'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\install\include\qtcore\qendian.h(330): note: see declaration of 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): error C2134: 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max': call does not result in a constant expression
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): note: failure was caused by call of undefined function or one not declared 'constexpr'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\install\include\qtcore\qendian.h(330): note: see declaration of 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): error C2134: 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max': call does not result in a constant expression
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): note: failure was caused by call of undefined function or one not declared 'constexpr'jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile.Debug [.obj\debug\qv4mm.obj] Error 2
      agent:2019/10/28 06:10:41 build.go:220: 
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\install\include\qtcore\qendian.h(330): note: see declaration of 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): error C2134: 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max': call does not result in a constant expression
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\qt\qtdeclarative\include\qtqml\5.13.1\qtqml\private\../../../../../src/qml/compiler/qv4compileddata_p.h(296): note: failure was caused by call of undefined function or one not declared 'constexpr'
      agent:2019/10/28 06:10:41 build.go:220: c:\users\qt\work\install\include\qtcore\qendian.h(330): note: see declaration of 'QSpecialInteger<QLittleEndianStorageType<quint16>>::max'
      agent:2019/10/28 06:10:41 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile.Debug [.obj\debug\qv4bytecodegenerator.obj] Error 2
      agent:2019/10/28 06:10:41 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile.Debug [.obj\debug\qv4compiler.obj] Error 2
      agent:2019/10/28 06:10:41 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile.Debug [.obj\debug\qv4compilercontext.obj] Error 2
      agent:2019/10/28 06:10:41 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile.Debug [.obj\debug\qv4compilerscanfunctions.obj] Error 2
      agent:2019/10/28 06:10:42 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile.Debug [.obj\debug\qv4compileddata.obj] Error 2
      agent:2019/10/28 06:10:42 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\qml\Makefile [debug-all] Error 2
      agent:2019/10/28 06:10:43 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\src\Makefile [sub-qml-make_first-ordered] Error 2
      agent:2019/10/28 06:10:43 build.go:220: jom: C:\Users\qt\work\qt\qtdeclarative\Makefile [sub-src-make_first] Error 2
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              fabiankosmale Fabian Kosmale
              liaqi Liang Qi
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes