qv4compileddata: do not use raw constexpr

Necessary after change 50481fb909c2bbbc26a193e23783e5b0151168b9 in qtbase

Fixes: QTBUG-79563
Change-Id: I72c94cd87b881f2fb3fee005f73583f64cbf68e4
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>